k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retro-game
  labels:
    app.kubernetes.io/managed-by: argocd
